# vibe_cli

./: .clippy.toml  .gitignore  .rustc_info.json  Cargo.toml  README.md  embeddings.db
application/: Cargo.toml
application/src/: agent_service.rs  explain_service.rs  lib.rs  rag_service.rs  safety_service.rs
cli/: Cargo.toml
cli/src/: main.rs
debug/.fingerprint/adler2-303846da12f4634a/: lib-adler2  lib-adler2.json
debug/.fingerprint/anstream-6462af9a81ffe1a5/: lib-anstream  lib-anstream.json
debug/.fingerprint/anstyle-65570d73b831b970/: lib-anstyle  lib-anstyle.json
debug/.fingerprint/anstyle-parse-2cee50362d7c3b67/: lib-anstyle_parse  lib-anstyle_parse.json
debug/.fingerprint/anstyle-query-6459925779283ffd/: lib-anstyle_query  lib-anstyle_query.json
debug/.fingerprint/anyhow-b3393d6712be2b66/: build-script-build-script-build  build-script-build-script-build.json
debug/.fingerprint/anyhow-b3ab1b3ee9153273/: lib-anyhow  lib-anyhow.json
debug/.fingerprint/anyhow-e1f554b474e8a16f/: run-build-script-build-script-build  run-build-script-build-script-build.json
debug/.fingerprint/arboard-e0cee6e89796aa83/: lib-arboard  lib-arboard.json
debug/.fingerprint/atomic-waker-93d4097655d001c5/: lib-atomic_waker  lib-atomic_waker.json
debug/.fingerprint/autocfg-e43f4f6a57543659/: lib-autocfg  lib-autocfg.json
debug/.fingerprint/base64-5aabd82bcf109ae7/: lib-base64  lib-base64.json
debug/.fingerprint/bitflags-4598063b2b64e11b/: lib-bitflags  lib-bitflags.json
debug/.fingerprint/bytes-718888e7106c3d42/: lib-bytes  (+1 more)
domain/: Cargo.toml
domain/src/: command_plan.rs  lib.rs  models.rs  safety_policy.rs  session.rs
infrastructure/: Cargo.toml
infrastructure/src/: config.rs  embedder.rs  embedding_storage.rs  file_scanner.rs  lib.rs  ollama_client.rs  search.rs
presentation/: Cargo.toml
presentation/src/: adapters.rs  cli.rs  lib.rs
shared/: Cargo.toml
shared/src/: confirmation.rs  error.rs  lib.rs  telemetry.rs  utils.rs
src/: config.rs  main.rs  model.rs  runner.rs  session.rs
tests/: Cargo.toml
tests/src/: lib.rs
(+346 files in other folders)
