[workspace]
resolver = "2"
members = [
    "domain",
    "application",
    "infrastructure",
    "presentation",
    "shared",
    "tests",
    "cli"
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
colored = "2.1"
dialoguer = "0.11"
arboard = "3.4"
rusqlite = { version = "0.32", features = ["bundled"] }
memmap2 = "0.9"
rayon = "1.10"
smallvec = "1.13"
arrayvec = "0.7"
dotenvy = "0.15"
docx-rs = "0.4"
crossterm = "0.27"
