[package]
name = "vibe_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vibe_cli"
path = "src/main.rs"

[dependencies]
presentation = { path = "../presentation" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
clap = { version = "4.5", features = ["derive"] }
tokio.workspace = true
bincode = "1.3"