[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
shared = { path = "../shared" }
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
memmap2.workspace = true
rayon.workspace = true
smallvec.workspace = true
arrayvec.workspace = true
dotenvy.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
futures = "0.3"
